Update Danish cover

--- a/content/about.html.twig
+++ b/content/about.html.twig
@@ -110,7 +110,7 @@
                                     'name': 'Danish Mughal',
                                     'title': 'Intern',
                                     'picture': 'https://secure.gravatar.com/avatar/f6bb39a3aa18fa49aaa5b861a311a189?s=88',
-                                    'cover': '',
+                                    'cover': 'http://i.imgur.com/6FbV1Z4.jpg',
                                     'description': "<strong>Danish</strong> is an engineering intern over the summer.",
                                     'social': {
                                         'envelope': 'mailto:danish@framebase.io',
