Fix links on homepage

--- a/content/index.html.twig
+++ b/content/index.html.twig
@@ -201,10 +201,10 @@
                                 </div>
                             </div>
                             <div class="span4" style="margin-top:5.6em;">
-                                <a class="btn btn-block btn-primary" style="padding: .8em inherit" href="/docs/getting_started">Getting Started</a>
+                                <a class="btn btn-block btn-primary" style="padding: .8em inherit" href="/docs/libraries/javascript">Javascript API</a>
                                 <div class="btn-group" style="display:block;margin-top:5px;margin-bottom: 30px" >
-                                    <a class="btn" style="padding: .8em inherit;width:50%" href="/docs/js">JavaScript API</a>
-                                    <a class="btn" style="padding: .8em inherit;width:50%" href="/docs/rest">REST API</a>
+                                    <a class="btn" style="padding: .8em inherit;width:50%" href="/docs/apis/upload">Upload API</a>
+                                    <a class="btn" style="padding: .8em inherit;width:50%" href="/docs/apis/details">Details API</a>
                                 </div>
 
 
